--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -83,16 +83,21 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
+
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(180deg, #1B1E25 18.86%, #007295 100%);
+
+  div#__next{
+    min-height: 100vh;
+  }
 }
 
 a {
