--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,34 +1,47 @@
-.loading{
-  background: url("/images/loading/background.png") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  min-height: 100vh;
+.home{
+  background: url("/images/home/background.png") no-repeat center center fixed;
+  height: 100vh;
 
-  .cat{
-    text-align: center;
-    padding-top: 132px;
-  }
-
-  .content{
-    padding-top: 50px;
-    padding-left: 55px;
-    padding-right: 55px;
-    display: flex;
+  .mining{
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    justify-content: center;
+    padding: 15px;
+    width: 100%;
 
-    .text{
-      color: #FFF;
-      text-align: center;
-      font-family: Poppins;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
+    .top{
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      width: 100%;
+
+      .username{
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+
+      .btn-exchange{
+        height: 50px;
+        padding: 9px 12px;
+        border-radius: 16px;
+        background: #003B51;
+      }
+    }
+
+    .coin{
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .cat{
+      width: 350px;
+      height: 350px;
+      flex-shrink: 0;
+      border-radius: 1000px;
+      
     }
   }
 }
