--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -6,7 +6,6 @@
         padding: 10px;
         display: inline-flex;
         flex-direction: column;
-        align-items: center;
         gap: 20px;
         width: 100%;
 
@@ -95,6 +94,48 @@
                 font-style: normal;
                 font-weight: 700;
                 line-height: normal;
+            }
+
+            .list{
+                height: 160px;
+                overflow: auto;
+            }
+        }
+
+        .buttons{
+            display: inline-flex;
+            align-items: flex-start;
+            gap: 10px;
+
+            .btn-invite{
+                display: flex;
+                width: 360px;
+                padding: 16px 60px;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                border-radius: 8px;
+                border: 3px solid rgba(89, 210, 249, 0.50);
+                background: var(--Gradient, linear-gradient(180deg, #59D2F9 -60.17%, #00A3FF 100%));
+                color: #FFF;
+                text-align: center;
+                font-family: Poppins;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+
+            .btn-copy{
+                display: flex;
+                width: 76px;
+                padding: 16px 60px;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                border-radius: 8px;
+                border: 3px solid rgba(89, 210, 249, 0.50);
+                background: linear-gradient(180deg, #59D2F9 -60.17%, #00A3FF 100%);
             }
         }
     }
