--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -3,7 +3,7 @@
     height: 100vh;
 
     .container{
-        padding: 10px;
+        padding: 15px;
         display: inline-flex;
         flex-direction: column;
         gap: 20px;
@@ -97,7 +97,8 @@
             }
 
             .list{
-                height: 160px;
+                width: 100%;
+                height: 120px;
                 overflow: auto;
             }
         }
@@ -108,31 +109,24 @@
             gap: 10px;
 
             .btn-invite{
-                display: flex;
                 width: 360px;
-                padding: 16px 60px;
-                justify-content: center;
-                align-items: center;
-                gap: 10px;
+                padding: 15px 35px;
                 border-radius: 8px;
                 border: 3px solid rgba(89, 210, 249, 0.50);
                 background: var(--Gradient, linear-gradient(180deg, #59D2F9 -60.17%, #00A3FF 100%));
                 color: #FFF;
                 text-align: center;
                 font-family: Poppins;
-                font-size: 18px;
+                font-size: 14px;
                 font-style: normal;
                 font-weight: 700;
                 line-height: normal;
             }
 
             .btn-copy{
-                display: flex;
                 width: 76px;
-                padding: 16px 60px;
-                justify-content: center;
-                align-items: center;
-                gap: 10px;
+                padding: 15px 15px;
+                text-align: center;
                 border-radius: 8px;
                 border: 3px solid rgba(89, 210, 249, 0.50);
                 background: linear-gradient(180deg, #59D2F9 -60.17%, #00A3FF 100%);
