--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -117,7 +117,7 @@
                 color: #FFF;
                 text-align: center;
                 font-family: Poppins;
-                font-size: 14px;
+                font-size: 18px;
                 font-style: normal;
                 font-weight: 700;
                 line-height: normal;
@@ -125,7 +125,7 @@
 
             .btn-copy{
                 width: 76px;
-                padding: 15px 15px;
+                padding: 13px;
                 text-align: center;
                 border-radius: 8px;
                 border: 3px solid rgba(89, 210, 249, 0.50);
