--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -12,6 +12,14 @@
     .cat{
       padding-top: 50px;
       text-align: center;
+
+      .bg{
+        width: 170px;
+        height: 250px;
+        border-radius: 250px;
+        background: #59D2F9;
+        filter: blur(28.649999618530273px);
+      }
     }
   
     .content{
