--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -121,6 +121,10 @@
                 font-style: normal;
                 font-weight: 700;
                 line-height: normal;
+
+                &:active{
+                    top: 2px;
+                }
             }
 
             .btn-copy{
@@ -130,6 +134,9 @@
                 border-radius: 8px;
                 border: 3px solid rgba(89, 210, 249, 0.50);
                 background: linear-gradient(180deg, #59D2F9 -60.17%, #00A3FF 100%);
+                &:active{
+                    top: 2px;
+                }
             }
         }
     }
