--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -30,6 +30,13 @@
       display: inline-flex;
       align-items: center;
       gap: 8px;
+      color: #FFF;
+
+      font-family: Poppins;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
     }
 
     .cat{
