--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -16,6 +16,12 @@
         display: flex;
         align-items: center;
         gap: 12px;
+        color: #FFF;
+        font-family: Poppins;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
       }
 
       .btn-exchange{
