--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -107,9 +107,10 @@
         background: var(--Background, #003b51);
         box-shadow: 0px 0px 8px 0px rgba(0, 193, 255, 0.8) inset;
 
-        .left, .right {
+        .left,
+        .right {
           display: flex;
-          align-items: flex-start;
+          align-items: center;
           gap: 8px;
         }
       }
