--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -1,76 +1,86 @@
 .container {
   padding: 15px;
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
-  gap: 20px;
+  align-items: flex-start;
+  gap: 24px;
   width: 100%;
 
-  .title {
+  .intro {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4px;
+    gap: 16px;
+    align-self: stretch;
 
-    .main {
-      color: var(--White, #fff);
-      text-align: center;
-      font-family: Poppins;
-      font-size: 24px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
-    }
-
-    .sub {
-      color: #fff;
-      text-align: center;
-      font-family: Poppins;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-    }
-  }
-
-  .rewards {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4px;
-
-    .item {
+    .title {
       display: flex;
-      align-items: flex-start;
+      flex-direction: column;
+      align-items: center;
       gap: 4px;
-      padding: 5px;
 
-      .content {
+      .main {
+        color: var(--White, #fff);
+        text-align: center;
+        font-family: Poppins;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+      }
+
+      .sub {
+        color: #fff;
+        text-align: center;
+        font-family: Poppins;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
+
+    .rewards {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+      align-self: stretch;
+
+      .item {
         display: flex;
-        flex-direction: column;
         align-items: flex-start;
+        gap: 8px;
+        padding: 6px;
 
-        .title {
-          color: var(--White, #fff);
-          font-family: Poppins;
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: normal;
-        }
-
-        .sub {
+        .content {
           display: flex;
-          align-items: center;
-          gap: 4px;
-          color: var(--White, #fff);
-          font-family: Poppins;
-          font-size: 12px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: normal;
+          flex-direction: column;
+          align-items: flex-start;
 
-          .number {
-            color: var(--Yellow, #fff175);
+          .title {
+            color: var(--White, #fff);
+            font-family: Poppins;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+          }
+
+          .sub {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            color: var(--White, #fff);
+            font-family: Poppins;
+            font-size: 10px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+
+            .number {
+              color: var(--Yellow, #fff175);
+            }
           }
         }
       }
@@ -81,7 +91,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
+    gap: 16px;
+    align-self: stretch;
 
     .title {
       color: var(--White, #fff);
@@ -95,22 +106,28 @@
     .list {
       width: 100%;
       height: 120px;
-      overflow: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+      align-self: stretch;
 
       .friend {
         display: flex;
-        height: 50px;
         padding: 6px;
         justify-content: space-between;
         align-items: center;
-        border-radius: 16px;
+        align-self: stretch;
+        border-radius: 8px;
         background: var(--Background, #003b51);
-        box-shadow: 0px 0px 8px 0px rgba(0, 193, 255, 0.8) inset;
+
+        /* Inner */
+        box-shadow: 0px 0px 8px 0px rgba(0, 193, 255, 0.5) inset;
 
         .left,
         .right {
           display: flex;
-          align-items: center;
+          align-items: flex-start;
           gap: 8px;
         }
       }
@@ -118,15 +135,18 @@
   }
 
   .buttons {
-    display: inline-flex;
+    display: flex;
     align-items: flex-start;
-    gap: 10px;
+    gap: 16px;
+    align-self: stretch;
 
     .btn-invite {
-      width: 360px;
-      padding: 15px 35px;
+      display: flex;
+      width: 304px;
+      padding: 8px 60px;
+
       border-radius: 8px;
-      border: 3px solid rgba(89, 210, 249, 0.5);
+      border: 2px solid rgba(89, 210, 249, 0.5);
       background: var(
         --Gradient,
         linear-gradient(180deg, #59d2f9 -60.17%, #00a3ff 100%)
@@ -134,7 +154,7 @@
       color: #fff;
       text-align: center;
       font-family: Poppins;
-      font-size: 18px;
+      font-size: 12px;
       font-style: normal;
       font-weight: 700;
       line-height: normal;
@@ -145,11 +165,10 @@
     }
 
     .btn-copy {
-      width: 76px;
-      padding: 13px;
+      padding: 8px;
       text-align: center;
       border-radius: 8px;
-      border: 3px solid rgba(89, 210, 249, 0.5);
+      border: 2px solid rgba(89, 210, 249, 0.5);
       background: linear-gradient(180deg, #59d2f9 -60.17%, #00a3ff 100%);
       &:active {
         top: 2px;
