--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -105,7 +105,7 @@
 
     .list {
       width: 100%;
-      height: 120px;
+      height: 160px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -140,11 +140,8 @@
     gap: 16px;
     align-self: stretch;
 
-    .btn-invite {
-      display: flex;
-      width: 304px;
-      padding: 8px 60px;
-
+    .btn {
+      padding: 8px;
       border-radius: 8px;
       border: 2px solid rgba(89, 210, 249, 0.5);
       background: var(
@@ -153,26 +150,19 @@
       );
       color: #fff;
       text-align: center;
-      font-family: Poppins;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
 
       &:active {
         top: 2px;
       }
     }
 
-    .btn-copy {
-      padding: 8px;
-      text-align: center;
-      border-radius: 8px;
-      border: 2px solid rgba(89, 210, 249, 0.5);
-      background: linear-gradient(180deg, #59d2f9 -60.17%, #00a3ff 100%);
-      &:active {
-        top: 2px;
-      }
+    .btn-invite {
+      width: 304px;
+      font-family: Poppins;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
     }
   }
 }
