--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -152,7 +152,8 @@
       text-align: center;
 
       &:active {
-        top: 2px;
+        transform: scale(0.98);
+        box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
       }
     }
 
