--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -150,10 +150,10 @@
       );
       color: #fff;
       text-align: center;
+      transition: 0.2s all;
 
       &:active {
         transform: scale(0.98);
-        box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
       }
     }
 
