--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,30 +1,39 @@
-.container{
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    padding-left:10px;
-    padding-right: 10px;
+.container {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  padding-left: 10px;
+  padding-right: 10px;
 
-    .menu{
-        display: flex;
-        padding: 12px 12px 10px 12px;
-        justify-content: space-between;
-        align-items: flex-end;
-        border-radius: 24px 24px 0px 0px;
-        border-top: 2px solid var(--Blue, #59D2F9);
-        background: #003B51;
-        box-shadow: 0px -6px 24px 0px rgba(0, 224, 255, 0.50);
-    
-        .menu-item{
-          display: flex;
-          padding: 4px 8px;
-          flex-direction: column;
-          align-items: center;
+  .menu {
+    display: flex;
+    width: 350px;
+    padding: 8px 8px 6px 8px;
+    justify-content: space-between;
+    align-items: flex-end;
+    border-radius: 15.443px 15.443px 0px 0px;
+    border-top: 1.287px solid var(--Blue, #59d2f9);
+    background: #003b51;
 
-          &.active{
-            border-radius: 16px;
-            background: #056380;
-          }
-        }
+    /* Drop */
+    box-shadow: 0px -4px 12px 0px rgba(0, 224, 255, 0.3);
+
+    .menu-item {
+      display: flex;
+      padding: 4px 6px;
+      flex-direction: column;
+      align-items: center;
+      color: var(--White, #fff);
+      font-family: Poppins;
+      font-size: 10px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+
+      &.active {
+        border-radius: 8px;
+        background: #056380;
+      }
     }
+  }
 }
