--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -1,74 +1,83 @@
-.loading{
-    background: url("/images/loading/background.png") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 100%;
+.loading {
+  background: url("/images/loading/background.png") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  .cat {
+    padding-top: 50px;
+    text-align: center;
+  }
+
+  .content {
+    padding-top: 25px;
+    padding-left: 30px;
+    padding-right: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-  
-    .cat{
-      padding-top: 50px;
+    align-items: center;
+    gap: 8px;
+    justify-content: center;
+
+    .text {
+      color: #fff;
       text-align: center;
-    }
-  
-    .content{
-      padding-top: 25px;
-      padding-left: 30px;
-      padding-right: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-      justify-content: center;
-  
-      .text{
-        color: #FFF;
-        text-align: center;
-        font-family: Poppins;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-      }
-    }
-
-    .progressBar{
-      appearance: none;
-      height: 24px;
-      border-radius: 93px;
-      background: var(--Background, #003B51);
-      width: 100%;
-      
-      /* Chrome and Safari */
-      &::-webkit-progress-bar {
-        background: var(--Background, #003B51);
-        border-radius: 93px;
-      }
-
-      &::-webkit-progress-value {
-        border-radius: 93px;
-        background: linear-gradient(90deg, rgba(89, 210, 249, 0.00) 0%, #59D2F9 100%);
-        border-top-left-radius: 100px;
-        border-bottom-left-radius: 100px;
-
-        transition: width 1s;
-      }
-
-      /* Firefox */
-      &::-moz-progress-bar {
-        border-radius: 93px;
-        background: linear-gradient(90deg, rgba(89, 210, 249, 0.00) 0%, #59D2F9 100%);
-        border-top-left-radius: 100px;
-        border-bottom-left-radius: 100px;
-      }
-    }
-
-    .icons{
-      display: flex;
-      align-items: flex-start;
-      gap: 20px;
+      font-family: Poppins;
+      font-size: 10px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
     }
   }
+
+  .progressBar {
+    appearance: none;
+    height: 24px;
+    border-radius: 93px;
+    background: var(--Background, #003b51);
+    width: 100%;
+
+    /* Chrome and Safari */
+    &::-webkit-progress-bar {
+      background: var(--Background, #003b51);
+      border-radius: 93px;
+    }
+
+    &::-webkit-progress-value {
+      border-radius: 93px;
+      background: linear-gradient(
+        90deg,
+        rgba(89, 210, 249, 0) 0%,
+        #59d2f9 100%
+      );
+      border-top-left-radius: 100px;
+      border-bottom-left-radius: 100px;
+
+      transition: width 1s;
+    }
+
+    /* Firefox */
+    &::-moz-progress-bar {
+      border-radius: 93px;
+      background: linear-gradient(
+        90deg,
+        rgba(89, 210, 249, 0) 0%,
+        #59d2f9 100%
+      );
+      border-top-left-radius: 100px;
+      border-bottom-left-radius: 100px;
+    }
+  }
+
+  .icons {
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+  }
+}
