--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -16,13 +16,12 @@
   }
 
   .content {
-    padding-top: 25px;
-    padding-left: 30px;
-    padding-right: 30px;
-    display: flex;
+    padding-left: 35px;
+    padding-right: 35px;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
+    gap: 24px;
     justify-content: center;
 
     .text {
