--- a/src/components/ComingSoon/ComingSoon.module.scss
+++ b/src/components/ComingSoon/ComingSoon.module.scss
@@ -1,7 +1,9 @@
 .container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   .text {
     color: var(--Yellow, #fff175);
