--- a/src/components/ComingSoon/ComingSoon.module.scss
+++ b/src/components/ComingSoon/ComingSoon.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 65px;
 
   .text {
     color: var(--Yellow, #fff175);
