--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -18,7 +18,7 @@
       gap: -7.722px;
       color: #fff;
       font-family: Poppins;
-      font-size: 16px;
+      font-size: 10px;
       font-style: normal;
       font-weight: 700;
       line-height: normal;
@@ -35,7 +35,8 @@
           height: 25.739px;
           position: absolute;
           left: -3.861px;
-          bottom: -0.444px;
+          border-radius: 0px 7.722px 7.722px 0px;
+          background: #dc68b5;
         }
       }
     }
