--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,7 +2,7 @@
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 20px;
   padding: 15px;
   width: 100%;
 
@@ -68,9 +68,20 @@
   }
 
   .cat {
-    width: 350px;
-    height: 350px;
-    flex-shrink: 0;
-    border-radius: 1000px;
+    display: flex;
+    width: 225px;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+
+    .shadow {
+      display: flex;
+      width: 225px;
+      height: 225px;
+      padding: 7.417px 36.702px 7.165px 36.468px;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0px 0px 15.443px 0px rgba(1, 182, 245, 0.6);
+    }
   }
 }
