--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -127,7 +127,7 @@
         .left,
         .right {
           display: flex;
-          align-items: flex-start;
+          align-items: center;
           gap: 8px;
         }
       }
