--- a/src/styles/UnSupport.module.scss
+++ b/src/styles/UnSupport.module.scss
@@ -21,6 +21,21 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      p {
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 700;
+        margin-bottom: 24px;
+        text-align: center;
+      }
+
+      .version {
+        font-size: 16px;
+        font-weight: 400;
+        margin-bottom: 0;
+        margin-top: 24px;
+      }
     }
   }
 }
