--- a/src/styles/UnSupport.module.scss
+++ b/src/styles/UnSupport.module.scss
@@ -21,12 +21,12 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      gap: 24px;
 
       p {
         font-size: 26px;
         font-style: normal;
         font-weight: 700;
-        margin-bottom: 24px;
         text-align: center;
       }
 
@@ -34,7 +34,6 @@
         font-size: 16px;
         font-weight: 400;
         margin-bottom: 0;
-        margin-top: 24px;
       }
     }
   }
