--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -2,5 +2,29 @@
   padding: 15px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+
+    .daily {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 12px;
+      align-self: stretch;
+
+      .title {
+        color: var(--White, #fff);
+        font-family: Poppins;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+      }
+    }
+  }
 }
