--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -2,7 +2,11 @@
   padding: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+  .cat {
+    display: flex;
+    align-items: center;
+  }
 
   .content {
     display: flex;
