--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -15,7 +15,7 @@
     align-items: flex-start;
     gap: 24px;
 
-    .daily {
+    .tasks {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -29,6 +29,38 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+      }
+
+      .tabs {
+        display: flex;
+        padding: 4px;
+        align-items: flex-start;
+        gap: 12px;
+        align-self: stretch;
+        border-radius: 24px;
+        background: var(--Background, #003b51);
+
+        .tab {
+          display: flex;
+          padding: 2px 10px;
+          justify-content: space-between;
+          align-items: center;
+          flex: 1 0 0;
+
+          color: var(--White, #fff);
+          text-align: center;
+          font-family: Poppins;
+          font-size: 10px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+
+          &.active {
+            color: #003b51;
+            border-radius: 24px;
+            background: var(--Blue, #59d2f9);
+          }
+        }
       }
     }
   }
