--- a/src/styles/Task.module.scss
+++ b/src/styles/Task.module.scss
@@ -2,6 +2,7 @@
   padding: 15px;
   display: flex;
   flex-direction: column;
+  padding-bottom: 75px;
 
   .cat {
     display: flex;
@@ -41,7 +42,6 @@
         background: var(--Background, #003b51);
 
         .tab {
-          display: flex;
           padding: 2px 10px;
           justify-content: space-between;
           align-items: center;
