--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -71,6 +71,8 @@
     display: flex;
     align-items: flex-end;
     gap: 16px;
+    width: 100%;
+    justify-content: space-between;
 
     .item {
       display: flex;
