--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -136,6 +136,10 @@
         align-items: flex-start;
         gap: -0.557px;
 
+        border-radius: 6px;
+        border: 1.287px solid rgba(89, 210, 249, 0.5);
+        background: linear-gradient(180deg, #59d2f9 0%, #00a3ff 100%);
+
         color: #fff;
         text-align: center;
         font-family: Poppins;
