--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -93,9 +93,9 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(180deg, #1B1E25 18.86%, #007295 100%);
+  background: linear-gradient(180deg, #1b1e25 18.86%, #007295 100%);
 
-  div#__next{
+  div#__next {
     height: 100%;
   }
 }
@@ -103,6 +103,19 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.popup-content {
+  display: flex;
+  width: 352px;
+  padding: 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  border-radius: 16px;
+  background: var(--Background, #003b51);
+  box-shadow: 0px 0px 24px 0px rgba(0, 152, 234, 0.3),
+    0px 0px 8px 0px rgba(0, 193, 255, 0.8) inset;
 }
 
 @media (prefers-color-scheme: dark) {
