--- a/src/components/TaskList/TaskList.module.scss
+++ b/src/components/TaskList/TaskList.module.scss
@@ -70,5 +70,13 @@
     border-radius: 8px;
     border: 3px solid rgba(89, 210, 249, 0.5);
     background: linear-gradient(180deg, #59d2f9 -60.17%, #00a3ff 100%);
+    cursor: pointer;
+    color: #fff;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
   }
 }
