--- a/src/components/TaskItem/TaskItem.module.scss
+++ b/src/components/TaskItem/TaskItem.module.scss
@@ -11,6 +11,10 @@
   /* Inner */
   box-shadow: 0px 0px 8px 0px rgba(0, 193, 255, 0.5) inset;
 
+  &.disabled {
+    opacity: 0.8;
+  }
+
   .content {
     display: flex;
     align-items: center;
