--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -102,6 +102,13 @@
           display: flex;
           align-items: center;
           gap: 8px;
+
+          color: var(--White, #fff);
+          font-family: Poppins;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
         }
       }
     }
