--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -185,6 +185,37 @@
       flex-shrink: 0;
       border-radius: 8px;
       background: linear-gradient(180deg, #00bfff 0%, #00598a 100%);
+
+      .info {
+        display: flex;
+        width: 96px;
+        height: 37px;
+        padding: 4px 8px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 4px;
+        flex-shrink: 0;
+        color: var(--White, #fff);
+        font-family: Poppins;
+        font-size: 7.722px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+
+        .coin {
+          display: flex;
+          align-items: center;
+          gap: 2.574px;
+
+          color: var(--White, #fff);
+          font-family: Poppins;
+          font-size: 11.583px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+      }
     }
 
     .text {
@@ -194,7 +225,7 @@
       font-size: 12px;
       font-style: normal;
       font-weight: 700;
-      line-height: normal;
+      line-height: 2.6;
       flex: auto;
     }
   }
