--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -107,6 +107,7 @@
 
       .process {
         display: flex;
+        width: 147px;
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
