--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -197,6 +197,8 @@
         align-items: center;
         gap: 4px;
         flex-shrink: 0;
+        border-radius: 8px;
+        background: #0181c7;
         color: var(--White, #fff);
         font-family: Poppins;
         font-size: 7.722px;
