--- a/src/components/LevelBar/LevelBar.module.scss
+++ b/src/components/LevelBar/LevelBar.module.scss
@@ -41,14 +41,14 @@
       }
 
       &::-webkit-progress-value {
-        background-color: linear-gradient(to right, #00c2ff, #39fb6f, #00c136);
+        background: linear-gradient(to right, #00c2ff, #39fb6f, #00c136);
         border-top-left-radius: 100px;
         border-bottom-left-radius: 100px;
       }
 
       /* Firefox */
       &::-moz-progress-bar {
-        background-color: linear-gradient(to right, #00c2ff, #39fb6f, #00c136);
+        background: linear-gradient(to right, #00c2ff, #39fb6f, #00c136);
         border-top-left-radius: 100px;
         border-bottom-left-radius: 100px;
       }
