--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -78,7 +78,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: -8px;
 
       .text {
         padding: 8px 8px 4px 8px;
@@ -93,6 +92,9 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+
+        margin-top: -8px;
+        z-index: -1;
       }
     }
   }
