--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -106,6 +106,10 @@
     flex-direction: column;
     align-items: center;
     gap: 4px;
+
+    &:active {
+      transform: scale(0.98);
+    }
   }
 
   .coming-soon {
