--- a/src/components/Profits/Profits.module.scss
+++ b/src/components/Profits/Profits.module.scss
@@ -1,14 +1,15 @@
 .profits {
   position: absolute;
-  bottom: 50%;
+  bottom: 20%;
   left: 0;
   z-index: var(--result-animation-index);
   width: 100%;
   display: flex;
   justify-content: center;
-  color: #ffc909;
+  color: #fff;
   opacity: 0;
-  font-size: 2rem;
+  font-size: 18px;
+  font-weight: normal;
   font-weight: 600;
   text-shadow: 0.2rem 0 1rem rgba(0, 0, 0, 0.8);
   transform-origin: center bottom;
