--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -78,6 +78,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      opacity: 0.5;
 
       .text {
         padding: 8px 8px 4px 8px;
