--- a/src/styles/upgrade/UpgradeCat.module.scss
+++ b/src/styles/upgrade/UpgradeCat.module.scss
@@ -8,16 +8,19 @@
     color: var(--White, #fff);
     text-align: center;
     font-family: Poppins;
-    font-size: 48px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
 
     .sub-title {
       display: flex;
-      justify-content: center;
       align-items: center;
-      gap: 8px;
+      gap: 4px;
       color: var(--White, #fff);
       font-family: Poppins;
       font-size: 18px;
@@ -28,7 +31,7 @@
       .coin {
         color: var(--Yellow, #fff175);
         font-family: Poppins;
-        font-size: 24px;
+        font-size: 12px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -47,12 +50,12 @@
   .upgrade {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    gap: 60px;
     align-items: center;
+    gap: 24px;
+    align-items: center;
+    width: 352px;
 
     .btn-upgrade {
-      width: 358px;
       padding: 16px 60px;
 
       border-radius: 8px;
@@ -92,7 +95,6 @@
       .progress-bar {
         appearance: none;
         height: 24px;
-        width: 360px;
         border-radius: 100px;
 
         /* Chrome and Safari */
