--- a/src/styles/upgrade/UpgradeCat.module.scss
+++ b/src/styles/upgrade/UpgradeCat.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 50px;
+  align-items: center;
+  gap: 40px;
 
   .title {
     color: var(--White, #fff);
@@ -23,7 +24,7 @@
       gap: 4px;
       color: var(--White, #fff);
       font-family: Poppins;
-      font-size: 18px;
+      font-size: 12px;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
@@ -50,9 +51,8 @@
   .upgrade {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     gap: 24px;
-    align-items: center;
     width: 352px;
 
     .btn-upgrade {
