--- a/src/styles/upgrade/UpgradeCat.module.scss
+++ b/src/styles/upgrade/UpgradeCat.module.scss
@@ -73,6 +73,11 @@
       &:active {
         scale: 0.8;
       }
+
+      &:disabled {
+        opacity: 0.5;
+        pointer-events: none;
+      }
     }
 
     .energy {
