--- a/src/styles/upgrade/UpgradeCat.module.scss
+++ b/src/styles/upgrade/UpgradeCat.module.scss
@@ -37,6 +37,7 @@
         font-weight: 700;
         line-height: normal;
         display: flex;
+        align-items: center;
       }
     }
   }
