--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -124,14 +124,17 @@
   }
 
   .claim {
-    opacity: 0.5;
     height: 36px;
     display: flex;
     align-self: stretch;
 
     border-radius: 8px;
     border: 2px solid rgba(89, 210, 249, 0.5);
-    background: var(--Background, #003b51);
+    background: linear-gradient(180deg, #00bfff 0%, #00598a 100%);
+
+    &:active {
+      scale: 0.8;
+    }
 
     .rectangle {
       width: 113.252px;
