--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,8 +2,8 @@
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
-  padding: 15px;
+  gap: 48x;
+  padding: 20px;
   width: 100%;
 
   .top {
