--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,7 +2,7 @@
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  gap: 48x;
+  gap: 48px;
   padding: 20px;
   width: 100%;
 
