--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -3,7 +3,7 @@
   position: fixed;
   bottom: 0;
   padding-left: 15px;
-  padding-right: 15spx;
+  padding-right: 15px;
 
   .menu {
     display: flex;
