--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -1,10 +1,11 @@
 .container {
-  padding: 15px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 24px;
+  gap: 40px;
   width: 100%;
+  padding-bottom: 70px;
 
   .intro {
     display: flex;
@@ -17,7 +18,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 8px;
+      gap: 16px;
       align-self: stretch;
 
       .item {
@@ -82,7 +83,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 8px;
+      gap: 16px;
       align-self: stretch;
       overflow-y: auto;
 
