--- a/src/styles/Friends.module.scss
+++ b/src/styles/Friends.module.scss
@@ -64,7 +64,7 @@
   .friend-list {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: space-between;
     gap: 16px;
     align-self: stretch;
 
@@ -140,7 +140,7 @@
     }
 
     .btn-invite {
-      width: 304px;
+      width: 330px;
       font-family: Poppins;
       font-size: 12px;
       font-style: normal;
