--- a/src/components/CheckAccount/VerifyResult.module.scss
+++ b/src/components/CheckAccount/VerifyResult.module.scss
@@ -22,7 +22,11 @@
       width: 90px;
       height: 4px;
       border-radius: 15px;
-      background: #fff;
+      background: #838383;
+
+      &.active {
+        background: #fff;
+      }
     }
   }
 
