--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -24,6 +24,7 @@
       font-style: normal;
       font-weight: 700;
       line-height: normal;
+      z-index: 1;
 
       .name {
         display: flex;
