--- a/src/styles/Age.module.scss
+++ b/src/styles/Age.module.scss
@@ -31,7 +31,7 @@
   }
 
   .inner {
-    padding: 62px 50px 140px;
+    padding-top: 62px;
     display: flex;
     flex-direction: column;
     align-items: center;
