--- a/src/components/Profits/Profits.module.scss
+++ b/src/components/Profits/Profits.module.scss
@@ -1,18 +1,23 @@
 .profits {
-  position: absolute;
-  bottom: 50%;
-  left: 0;
-  z-index: var(--result-animation-index);
-  width: 100%;
-  display: flex;
-  justify-content: center;
   color: #fff;
-  opacity: 0;
-  font-size: 18px;
-  font-weight: normal;
-  font-weight: 600;
-  text-shadow: 0.2rem 0 1rem rgba(0, 0, 0, 0.8);
-  transform-origin: center bottom;
+    font-size: 32px;
+    font-weight: 700;
+    left: 0;
+    position: absolute;
+    top: 0;
+    -webkit-tap-highlight-color: transparent;
+    align-items: center;
+    display: flex;
+    height: 32px;
+    justify-content: center;
+    line-height: 1;
+    pointer-events: none;
+    text-align: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    width: 100px;
+    z-index:60;
   animation: move-up 0.5s ease-in-out forwards;
 }
 
